--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ input:focus, textarea:focus, select:focus, button:focus {
 /*---------- Main Wrapper css Start -------*/
 .prt_main_wrapper{
 	position:relative;
-	overflow-x:hidden;
+	/*overflow-x:hidden;*/
 }
 .prt_main_wrapper::-webkit-scrollbar-track{
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -293,7 +293,7 @@ opacity: 1 !important;}
     background-position: 190px -165px;
     z-index: 1;
     text-align: center;
-    margin-top: 10%;
+    /*margin-top: 10%;*/
 }
 .prt_logo_wrapper img{
     position: fixed;
@@ -376,10 +376,11 @@ opacity: 1 !important;}
 	width:100px;
 }
 .prt_menu_wrapper a.prt_bottom{
-	bottom:45px;
+	bottom:5%;
 	left:0px;
 	right:0px;
 	width:150px;
+    position: absolute;
 }
 .prt_menu_wrapper a.prt_left{
 	top:50%;
@@ -401,6 +402,7 @@ opacity: 1 !important;}
 	top:-100%;
     z-index: 1;
     display: none;
+
 }
 .prt_about_info{
 	display:inline-block;
@@ -1550,6 +1552,19 @@ opacity: 1 !important;}
 }
 .prt_home_wrapper h1 {
     font-size: 50px;
+    position: absolute;
+    top: 50%;
+    /* font-size: 150px; */
+    color: #ffffff;
+    font-weight: bold;
+    background: url(../images/content/banner_text_bg.jpg) no-repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: cover;
+    /* background-position: 190px -165px; */
+    z-index: 1;
+    text-align: center;
+    /*margin-top: 10%;*/
 }
 .prt_counter_box {
     padding-left: 0px;
