--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,8 @@ opacity: 1 !important;}
 }
 .prt_about_img img{
 	display:inline-block;
+    border-radius: 50%;
+    box-shadow: 2px 2px 22px grey;
 }
 .prt_about_details{
 	display:inline-block;
@@ -1257,6 +1259,7 @@ opacity: 1 !important;}
 	width:100%;
 	margin-bottom:30px;
 	text-align:center;
+    box-shadow: 4px 3px 6px #bdbcbc;
 }
 .prt_portfolio_img{
 	display:inline-block;
@@ -1304,6 +1307,8 @@ opacity: 1 !important;}
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
+    height: 150px;
+    padding: 10px;
 }
 .prt_portfolio_img:hover img{
 	display:inline-block;
@@ -1325,10 +1330,13 @@ opacity: 1 !important;}
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
+    background-color: rgba(124, 122, 122, 0.3);
+    width: 100%;
+    color: black;
 }
 .prt_portfolio_text{
 	position:absolute;
-	bottom:-111px;
+	/* bottom:-111px; */
 	left:0px;
 	width:100%;
 	text-align:left;
@@ -1341,15 +1349,18 @@ opacity: 1 !important;}
     transition: all 0.3s;
 }
 .prt_portfolio_text h4{
-	font-size:18px;
+	font-size:14px;
 	text-transform:uppercase;
 	color:#000000;
 	margin-top:0px;
+    padding: 10px 0px;
+    font-weight: bold;
 }
 .prt_portfolio_text p{
 	margin:0px;
 	text-transform:capitalize;
 	color:#000000;
+    padding-bottom: 10px;
 }
 /*---------- Footer css Start -------*/
 .prt_footer_wrapper{
